Adjust css according to mockup color+ fix row alignment + set input cell color

--- a/app/styles/grids/default.less
+++ b/app/styles/grids/default.less
@@ -1,21 +1,24 @@
+@ssense_light_grey: #efefef;
+@ssense_border_gray: #999999;
+@ssense_table_text_color: #2f2f2f;
 #ms-planning{
     .parentDiv{
         height: ~"calc(100% - 176px)";
-        margin-bottom: 16px;
+        margin: 0px 0px 15px 15px;
         overflow: hidden;
 
         .handsontable{
             font-family: Monospaced Number,Chinese Quote,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,PingFang SC,Hiragino Sans GB,Microsoft YaHei,Helvetica Neue,Helvetica,Arial,sans-serif;
 
             table.htCore{
-                border-right: 2px solid #999;
+                border-right: 2px solid @ssense_border_gray;
                 .headerCell{
                     padding: 3px 8px;
                     font-weight: bold;
                     font-size: 12px;
                     color: #fff;
-                    background: #222;
-                    border-color:#999;
+                    background: #efefef;
+                    border-color:@ssense_border_gray;
                     word-wrap: break-word;
                 }
                 thead{
@@ -24,10 +27,10 @@
                     }
                     tr:first-child th {
                       border: none;
-                      border-bottom: 1px solid @ssense_grey;
                     }
                     tr:last-child th{
-                        border-right: 1px solid @ssense_grey;
+                      border-left: 1px solid @ssense_border_gray;
+                      border-top: 1px solid @ssense_border_gray;
                     }
                 }
                 td{
@@ -36,9 +39,9 @@
                     white-space: pre;
                 }
                 th, tbody tr td:first-of-type{
-                    border-top: none;
-                    color: #fff;
-                    background: @ssense_black;
+                    border-top: 1px solid @ssense_border_gray;
+                    color: @ssense_table_text_color;
+                    background:@ssense_light_grey;
                     font-size: 11px;
                     font-weight: normal;
                 }
@@ -47,8 +50,8 @@
                 }
                 tbody th{
                     padding: 3px 0;
-                    border-bottom-color: @ssense_grey;
-                    border-right: 1px solid @ssense_grey;
+                    border-bottom-color: @ssense_border_gray;
+                    border-right: 1px solid @ssense_border_gray;
                 }
                 td.currentRow, td.currentCol{
                     background: #f1f1f1;
@@ -61,38 +64,37 @@
                     //     background: #f7f7f7;
                     // }
                     td:nth-child(1){
-                        background: #222;
+                        background: @ssense_light_grey !important;
                     }
                 }
             }
             td:not(.htDimmed).htNumeric {
-                color: @ssense_black !important;
+                color: @ssense_table_text_color !important;
                 font-weight: bold;
                 // background-color: #eef9ed;
             }
             td {
-                border-color: #ddd;
-                &.leftHandColors{
+              &.leftHandColors{
                     background-color: #f4f4f4;
                 }
                 &.cellNA {
                     color: #777 !important;
                 }
                 &.htDimmed.htNumeric {
-                    color: @ssense_grey;
+                    color: @ssense_table_text_color;
                 }
             }
             .ht_clone_top_left_corner {
               tr:last-child th{
-                  border-right: 1px solid @ssense_grey;
+                border-right: 1px solid @ssense_border_gray;
                   border-left: none;
               }
             }
             .leftCellBorder{
-                border-left: 2px solid #999;
+                border-left: 2px solid @ssense_border_gray;
             }
             .bottomCellBorder{
-                border-bottom: 2px solid #999;
+                border-bottom: 2px solid @ssense_border_gray;
             }
             .metricCell{
                 padding-right: 20px !important;
@@ -102,7 +104,7 @@
             }
             .ht_clone_left td {
               border-right: none;
-              // border-bottom: 1px solid @ssense_grey;
+              // border-bottom: 1px solid @ssense_light_grey;
             }
         }
     }
